Add default form

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,38 @@ Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
+
+# Work Example
+/vendor
+/node_modules
+.env.prod
+.DS_Store
+Thumbs.db
+._.DS_Store
+._*
+_*
+.idea/*
+.idea
+!_verstka
+.vagrant
+Vagrantfile
+config/debugbar.php
+public/assets
+public/js
+public/js/profile.js
+public/mix*
+public/fonts
+public/css
+public/images
+public/cache
+public
+storage/shared/
+storage/*
+.phpintel
+/upload
+package-lock.json
+.editorconfig
+.prettierrc
+.run
+/.phpunit.cache
+/.phpunit.result.cache
