--- a/WebDriverBot/packages.config
+++ b/WebDriverBot/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Selenium.Support" version="4.1.0" targetFramework="net471" />
   <package id="Selenium.WebDriver" version="4.1.0" targetFramework="net471" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="96.0.4664.4500" targetFramework="net471" />
 </packages>
